# jaxmapp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
cython_helper/: ccc.pyx  setup.py
data/eval_data/hetero/: 00000000_ins.pkl  00000001_ins.pkl  00000002_ins.pkl  00000003_ins.pkl  00000004_ins.pkl  00000005_ins.pkl  00000006_ins.pkl  00000007_ins.pkl  00000008_ins.pkl  00000009_ins.pkl  00000010_ins.pkl  00000011_ins.pkl  00000012_ins.pkl  00000013_ins.pkl  00000014_ins.pkl  00000015_ins.pkl  00000016_ins.pkl  00000017_ins.pkl  00000018_ins.pkl  00000019_ins.pkl  00000020_ins.pkl  00000021_ins.pkl  00000022_ins.pkl  00000023_ins.pkl  00000024_ins.pkl  00000025_ins.pkl  00000026_ins.pkl  00000027_ins.pkl  00000028_ins.pkl  00000029_ins.pkl  00000030_ins.pkl  00000031_ins.pkl  00000032_ins.pkl  00000033_ins.pkl  00000034_ins.pkl  00000035_ins.pkl  00000036_ins.pkl  00000037_ins.pkl  00000038_ins.pkl  00000039_ins.pkl  (+73 more)
data/eval_data/many_obs/: 00000000_ins.pkl  00000001_ins.pkl  00000002_ins.pkl  00000003_ins.pkl  00000004_ins.pkl  00000005_ins.pkl  00000006_ins.pkl  00000007_ins.pkl  00000008_ins.pkl  00000009_ins.pkl  00000010_ins.pkl  00000011_ins.pkl  00000012_ins.pkl  00000013_ins.pkl  00000014_ins.pkl  00000015_ins.pkl  00000016_ins.pkl  00000017_ins.pkl  (+95 more)
data_example/map_data/: 0000.txt  0001.txt  0002.txt  0003.txt
docs/: conf.py  env.rst  index.rst  jaxmapp.env.instance.rst  jaxmapp.env.obstacle.rst  jaxmapp.env.rst  jaxmapp.model.ctrmnet.rst  jaxmapp.model.cvae.rst  jaxmapp.model.preprocessor.rst  jaxmapp.model.rst  jaxmapp.model.utils.encoder.rst  jaxmapp.model.utils.features.rst  jaxmapp.model.utils.rst  jaxmapp.planner.planner.rst  jaxmapp.planner.prioritized_planning.rst  jaxmapp.planner.result.rst  jaxmapp.planner.rst  jaxmapp.planner.utils.rst  jaxmapp.roadmap.grid_sampler.rst  jaxmapp.roadmap.learned_sampler.rst  jaxmapp.roadmap.random_sampler.rst  jaxmapp.roadmap.rst  jaxmapp.roadmap.sampler.rst  jaxmapp.roadmap.timed_roadmap.rst  jaxmapp.roadmap.utils.rst  jaxmapp.rst  jaxmapp.utils.data.rst  jaxmapp.utils.rst  jaxmapp.utils.sampler.rst  jaxmapp.utils.viz.rst  model.rst  modules.rst  planner.rst  roadmap.rst  utils.rst
jaxmapp/env/: instance.py
jaxmapp/model/: cvae.py
jaxmapp/planner/: __init__.py  planner.py  result.py
jaxmapp/roadmap/: __init__.py  grid_sampler.py  learned_sampler.py  random_sampler.py  sampler.py  timed_roadmap.py
jaxmapp/utils/: sampler.py  viz.py
model/training_hetero_k05/: checkpoint_894
scripts/: .gitignore  create_all_eval_data.sh  create_eval_data.py  create_tfrecords.py  create_training_data.py  download_all_data.sh  eval.py  eval_all.sh  eval_example.sh  train.py
scripts/config/: create_eval_data.yaml  create_training_data.yaml  eval.yaml  train.yaml
tests/: data_test.py  env_test.py  planning_test.py  roadmap_test.py
tutorials/: 1. Quickstart.ipynb  2. Develop roadmap construction methods.ipynb  3. Benchmarking roadmap construction methods.ipynb  4. Training sampler.ipynb  5. Sparsify solution paths.ipynb  Gallery.ipynb  create_map.ipynb  full benchmark.ipynb
(+416 files in other folders)
