[metadata]
name = jaxmapp
version = 0.0.1
description = multi-agent path planning in continuous spaces
long_description = file: README.md
keywords = multi-agent path-planning
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    jax==0.2.25
    jaxlib==0.1.75
    numpy
    tqdm
    flax
    tensorboardx
    jupyterlab
    matplotlib
    scikit-image
    pymap2d
    tqdm
    timeout_decorator
    tensorflow_probability
    hydra-core
    joblib
    numpy2tfrecord
    cython
    pytest