[metadata]
name = jaxmapp
version = 0.0.2
author = Ryo Yonetani
author_email = ryo.yonetani@sinicx.com
url = https://github.com/omron-sinicx/jaxmapp
description = multi-agent path planning in continuous spaces
description-content-type = text/markdown
long_description = file: README.md
keywords = multi-agent path-planning
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Robot Framework :: Library
    Framework :: Robot Framework :: Tool

[options]
packages = find:
install_requires =
    jax>=0.2.25
    jaxlib>=0.1.75
    numpy
    tqdm
    flax
    tensorboardx
    jupyterlab
    matplotlib
    seaborn
    scikit-image
    pymap2d
    tqdm
    timeout_decorator
    tensorflow_probability
    hydra-core
    joblib
    numpy2tfrecord
    cython
python_requires = >=3.9

[options.extras_require]
dev =
    pytest
    pysen==0.10.1
    black==21.10b0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.910

